Add crappy pagination for the main page

--- a/commands/templates/main.html
+++ b/commands/templates/main.html
@@ -6,8 +6,9 @@
         {{ if $item.WorthShowing }}
         <article data-key="{{$item.Key}}">
             <header>
-                <a name="{{$item.Key}}">
-                <h1 class="ui header">{{$item.Title}}</h1>
+		<a name="{{$item.Key}}" href="{{$item.FirstLink.Href}}">
+			<h1 class="ui header">{{$item.Title}}</h1>
+		</a>
                 <section class="meta-tags">
                     <a class="ui label large blue author" href="/channel/{{$item.ChannelKey}}">{{$item.Author.Name}}</a>
                     <span class="large ui label date">{{ $item.Date.Format "Jan 2, 2006" }}</span>
@@ -27,4 +28,7 @@
      {{ end }}
 {{ else }}
     No Articles
+{{ end }}
+{{ with .nextPage}}
+<a class="ui basic button" href="?p={{.}}">Next page</a>
 {{ end }}
