--- a/commands/templates/full.html
+++ b/commands/templates/full.html
@@ -12,6 +12,7 @@
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.16.1/css/semantic.css">
 <link rel="stylesheet" type="text/css" href="/static/css/feed.css">
+<link type="application/atom+xml" rel="alternate" href="/atom"/>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="/static/js/feed.js"></script>
